# earthmover

./: .gitattributes  .gitignore  Cargo.toml  README.md  wsl_example.sh
.github/workflows/: rust.yml
CAD-files/AutoCar/Car Drivetrain/: README
CAD-files/Documentation/: README
CAD-files/Standard Components/: 28BYJ-48 Stepper Motor.SLDPRT  Bearing.SLDPRT  Limit Switch.SLDPRT  M3 screw socket_head.SLDPRT  MPU-6050.SLDPRT  README
achiever/: Cargo.toml  README.md
achiever/src/: body.rs  brain.rs  goals.rs  lib.rs
achiever/src/body/: inputs.rs  outputs.rs  pi_peripherals.rs
achiever/src/body/inputs/: rpi_inputs.rs
achiever/src/body/outputs/: jetson_outputs.rs  rpi_outputs.rs
achiever/src/brain/: agent.rs  buffer.rs  instruction.rs  mod.rs
data/wal/: 00000000
design-docs/: ARROWHEAD-PROTOCOL.md
design-specs/mk-1/: README.md
design-specs/mk-1/files/: README.md
earthmover-achiever/: Cargo.toml  README.md
earthmover-achiever/src/: body.rs  communication.rs  goals.rs  lib.rs  main.rs  protocol.rs
earthmover-achiever/src/body/: inputs.rs  pi_peripherals.rs
earthmover-achiever/src/body/inputs/: jetson_inputs.rs
earthmover-achiever/src/body/outputs/: rpi_outputs.rs
earthmover-achiever/src/brain/: agent.rs  buffer.rs  instruction.rs
earthmover-achiever/src/goals/: multi_dim.rs
earthmover-dualcommunication/: mastermain.cpp  slave.cpp
earthmover-hivemind/: Cargo.toml
earthmover-hivemind/src/: lib.rs  main.rs  service.rs  state.rs
earthmover-hivemind/src/service/: service_impl.rs
earthmover-hivemind/src/state/: message.rs
earthmover-lidar/: Cargo.toml
earthmover-lidar/src/: lib.rs
earthmover-matlab/: README.md
earthmover-matlab/LIDAR-Controls/: DegToStep.m  LIDAR_code.m  LIDAR_coordinates.m  README  motorPositions.m
earthmover-parsing/: Cargo.toml
earthmover-parsing/src/: lib.rs
earthmover-research/bayesian-additive-regression-trees/: Bayesian Additive Regression Trees.ipynb  Feature Selection & Bayesian Additive Regression Trees.ipynb  UNIQLO & Bayesian Additive Regression Trees.ipynb
earthmover-research/bayesian-additive-regression-trees/csv/: data_for_BART.csv
earthmover-research/box-2d environments/: Bipedal Walker with Reinforcement Learning.ipynb  Car Racing with Reinforcement Learning.ipynb  Lunar Landing Reinforcement Learning.ipynb  Lunar Landing with Reinforcement Learning.ipynb
earthmover-research/chapter-2-reinforcement-learning/: cartpole.py  cartpole_random.py  cartpole_random_human.py  cartpole_random_video.py  random_action_wrapper.py  starter.py
earthmover-research/chapter-3-deep-learning-pytorch/: gradient.py  neural_network.py  starter.py
earthmover-research/frozen-lake-environment/: frozen_lake8x8.pkl  q-learning.py  random.py
earthmover-research/frozen-lake-environment/extra-files/: frozen_lake8x8.pkl
earthmover-research/jupyter-docker/: Dockerfile  requirements.txt
earthmover-research/lunar-lander/: Car Racing with Reinforcement Learning.ipynb  Lunar Landing Reinforcement Learning.ipynb
earthmover-research/ray/: Untitled.ipynb  ray.ipynb
earthmover-research/ray-library-research/: ray.ipynb  ray_tutorial.ipynb  timeline-03000000-2025-01-07_01-37-15.json
earthmover-research/ray-library-research/prometheus-3.1.0.darwin-amd64/: prometheus  promtool
earthmover-research/ray-library-research/temp/ray/: session_latest
earthmover-research/ray-library-research/temp/ray/session_2025-01-06_19-57-50_687731_84549/: node_ip_address.json
earthmover-robotics/raspberry-pico-w-micropython/led-blinking/: blink.py  control.py  led.py  wiring.py
earthmover-robotics/raspberry-pico-w/led-blinking/: blink.py
earthmover-simulation/: Cargo.toml
earthmover-simulation/examples/: physics.rs
earthmover-simulation/src/: lib.rs  orchestrate.rs  sim.rs
earthmover-simulation/src/sim/: backend.rs
earthmover-simulation/src/sim/backend/: physics.rs
earthmover-website/weatherApp/: .gitignore  manage.py
earthmover-website/weatherApp/salvin/: apps.py  models.py  urls.py  views.py
earthmover-website/weatherApp/templates/: index.html
earthmover-website/weatherApp/weatherApp/: asgi.py  settings.py  urls.py  wsgi.py
frontends/joint-ui/: index.html
hello/: 404.html  Cargo.toml  hello.html
hello/src/: lib.rs  main.rs
hivemind/: Cargo.toml
joint-creation/: Cargo.toml
joint-creation/src/: main.rs  state.rs
rplidar-rppal/: Cargo.toml  README.md
rplidar-rppal/examples/: hello_lidar.rs
rplidar-rppal/src/: lib.rs  rplidar_a1.rs
