[workspace]
members = [ "earthmover-achiever","earthmover-hivemind", "earthmover-simulation", "hello"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["BradenEverson"]

[workspace.lints.rust]
missing_docs = "warn"
nonstandard-style = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"

[workspace.lints.clippy]
missing_docs_in_private_items = "warn"
