[workspace]
members = [ "earthmover-achiever","earthmover-hivemind", "earthmover-lidar", "earthmover-simulation", "rplidar-rppal"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["BradenEverson"]

[workspace.dependencies]
clap = { version = "4.5.18", features = ["derive"] }
reqwest = { version = "0.12.8" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
slotmap = { version = "1.0.7", features = ["serde"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
urlencoding = "2.1.3"
futures-util = { version = "0.3.30", features = ["tokio-io"] }
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-tungstenite = "0.14.0"
hyper-util = { version = "0.1.6", features = ["full", "tokio"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
bevy = "0.14.2"
bevy_rapier3d = "0.27.0"
futures = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rapier3d = "0.22.0"
indicatif = "0.17.8"
rand = "0.8.5"
rppal = { version = "0.19.0" }

earthmover-achiever = { path = "./earthmover-achiever" }
earthmover-simulation = { path = "./earthmover-simulation" }

[workspace.lints.rust]
missing_docs = "warn"
nonstandard-style = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"

[workspace.lints.clippy]
missing_docs_in_private_items = "warn"
