[package]
name = "earthmover-achiever"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
rppal = { version = "0.19.0", optional = true }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
slotmap = { version = "1.0.7", features = ["serde"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }

[features]
default = []
rpi = ["dep:rppal"]
jetson = []

[lints.rust]
missing_docs = "warn"
nonstandard-style = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"

[lints.rustdoc]
broken_intra_doc_links = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
