[package]
name = "earthmover-achiever"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
clap = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slotmap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true } 
urlencoding = { workspace = true }
uuid = { workspace = true }
rppal = { workspace = true, optional = true }
deku = "0.18.1"

[features]
default = []
rpi = ["dep:rppal"]
jetson = []
