[package]
name = "earthmover-hivemind"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
futures-util = { version = "0.3.30", features = ["tokio-io"] }
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-tungstenite = "0.14.0"
hyper-util = { version = "0.1.6", features = ["full", "tokio"] }
tokio = { version = "1.39.2", features = ["full"] }
