[package]
name = "earthmover-hivemind"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
futures-util = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-tungstenite = { workspace = true }
hyper-util = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
earthmover-achiever = { workspace = true }
earthmover-simulation = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints.rust]
missing_docs = "warn"
nonstandard-style = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"

[lints.rustdoc]
broken_intra_doc_links = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
