[package]
name = "earthmover-parsing"
edition = "2021"
version.workspace = true
authors.workspace = true

[lib]

[lints.rust]
missing_docs = "warn"
nonstandard-style = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"

[lints.rustdoc]
broken_intra_doc_links = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"

[dependencies]
urdf-rs = "0.9.0"
earthmover-achiever = { path = "../earthmover-achiever" }
