[package]
name = "earthmover-simulation"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
bevy = "0.14.2"
bevy_rapier3d = "0.27.0"
futures = "0.3.30"
earthmover-achiever = { path = "../earthmover-achiever" }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rapier3d = "0.22.0"
indicatif = "0.17.8"

[lints.rust]
missing_docs = "warn"
nonstandard-style = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"

[lints.rustdoc]
broken_intra_doc_links = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"

[dev-dependencies]
rand = "0.8.5"
