[package]
name = "earthmover-simulation"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
bevy = { workspace = true }
bevy_rapier3d =  { workspace = true }
futures = { workspace = true }
earthmover-achiever = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rapier3d = { workspace = true }
indicatif = { workspace = true } 
rand = { workspace = true }

[dev-dependencies]
rand = "0.8.5"
