[package]
name = "rplidar-rppal"
version = "0.1.0"
edition = "2021"
authors = ["Braden Everson <bradeneverson@gmail.com>"]
description = "A Rust crate for accessing RpLidar A1 sensor data using the rppal library on a Raspberry Pi."
license = "MIT"
documentation = "https://docs.rs/rplidar-rppal"
readme = "README.md"
keywords = ["uart", "rppal", "raspberry-pi", "lidar"]
categories = ["embedded", "hardware-support"]

[dependencies]
rppal = "0.19.0"
